CODE MARCHE AVANT DE CHANGER L'EMPLACEMENT DE LA MAJ DES MARKOV CHAINS

--- a/src/main/python/PlottingMethods.ipynb
+++ b/src/main/python/PlottingMethods.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,19 +74,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#def drawPlotDSA(best_y, curr_y, temp, acceptance_pb, acc_best_sol, ''''''):\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def drawPlotDSA(best_y, curr_y, temp, acceptance_pb, acc_best_sol, density, markov_len, max_markov_len, prob_factor, density_factor):\n",
+    "    x = np.arange(len(best_y))\n",
+    "    string = str(prob_factor)\n",
+    "    string2 = str(density_factor)\n",
+    "    \n",
+    "    line1, = plt.plot(x, best_y, color='g')\n",
+    "    line2, = plt.plot(x, temp, color='orange')\n",
+    "    line3, = plt.plot(x, markov_len, color='black')\n",
+    "    line4, = plt.plot(x, max_markov_len, color='grey')\n",
+    "    line5, = plt.plot(x, density*density_factor, color='purple')\n",
+    "    \n",
+    "    plt.scatter(x, curr_y, s=1, label='Current Solution', color='blue')\n",
+    "    plt.scatter(x, acceptance_pb*prob_factor, s=1, label='Acceptance proba x'+string, color='pink')\n",
+    "\n",
+    "\n",
+    "    line1.set_label('Best Solution')\n",
+    "    line2.set_label('Temperature')\n",
+    "    line3.set_label('Actual MarkovChains Length')\n",
+    "    line4.set_label('Max MarkovChains Length')\n",
+    "    line5.set_label('CG Density x'+string2)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    fig = plt.gcf()\n",
+    "    fig.set_size_inches(13,10)\n",
+    "\n",
+    "    plt.legend()\n",
+    "    plt.yscale('log')\n",
+    "    plt.show()"
+   ]
   },
   {
    "cell_type": "code",
