--- a/src/main/python/PlottingMethods.ipynb
+++ b/src/main/python/PlottingMethods.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,8 +96,8 @@
     "    line4, = plt.plot(x, max_markov_len, color='grey')\n",
     "    line5, = plt.plot(x, density*density_factor, color='purple')\n",
     "    \n",
-    "    plt.scatter(x, curr_y, s=1, label='Current Solution', color='blue')\n",
-    "    plt.scatter(x, acceptance_pb*prob_factor, s=1, label='Acceptance proba x'+string, color='pink')\n",
+    "    plt.scatter(x, curr_y, s=3, marker=\">\", label='Current Solution', color='blue')\n",
+    "    plt.scatter(x, acceptance_pb*prob_factor, s=1, marker='+', label='Acceptance proba x'+string, color='pink')\n",
     "\n",
     "\n",
     "    line1.set_label('Best Solution')\n",
