--- a/src/main/python/ProcessData.ipynb
+++ b/src/main/python/ProcessData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
     "    temp = []\n",
     "    density = []\n",
     "    markov_len = []\n",
-    "    max_markov_len = []\n",
+    "    curr_x = []\n",
     "    runtime = 0\n",
     "    iteration_nbr = 0\n",
     "    with open(pathTXT, \"r\") as file:\n",
@@ -88,7 +88,7 @@
     "                elif(line.startswith(\"Nbr\")):\n",
     "                    iteration_nbr = int(re.sub(\"[^0-9]\", \"\", line))\n",
     "                else:\n",
-    "                    BEST_y, CURR_y, ACCEPT_PB, ACC_BEST_Sol, TEMP, DENSITY, MARKOV_LEN, MAX_MARKOV_LEN ,nothing  = line.split(\"|\")\n",
+    "                    BEST_y, CURR_y, ACCEPT_PB, ACC_BEST_Sol, TEMP, DENSITY, MARKOV_LEN, CURR_X ,nothing  = line.split(\"|\")\n",
     "                    best_y.append(float(BEST_y.strip()))\n",
     "                    curr_y.append(float(CURR_y.strip()))\n",
     "                    acceptance_pb.append(float(ACCEPT_PB.strip()))\n",
@@ -96,7 +96,7 @@
     "                    temp.append(float(TEMP.strip()))\n",
     "                    density.append(float(DENSITY.strip()))\n",
     "                    markov_len.append(float(MARKOV_LEN.strip()))\n",
-    "                    max_markov_len.append(float(MAX_MARKOV_LEN.strip()))\n",
+    "                    curr_x.append(float(CURR_X.strip()))\n",
     "            i+=1\n",
     "\n",
     "    best_y = np.asarray(best_y)\n",
@@ -106,9 +106,9 @@
     "    temp = np.asarray(temp)\n",
     "    density = np.asarray(density)\n",
     "    markov_len = np.asarray(markov_len)\n",
-    "    max_markov_len = np.asarray(max_markov_len)\n",
+    "    curr_x = np.asarray(curr_x)\n",
     "    \n",
-    "    return best_y, curr_y, acceptance_pb, acc_best_sol, temp, density, markov_len, max_markov_len, runtime, iteration_nbr"
+    "    return best_y, curr_y, acceptance_pb, acc_best_sol, temp, density, markov_len, curr_x, runtime, iteration_nbr"
    ]
   },
   {
