change again minFunction : plus de range

--- a/src/main/python/PlottingMethods.ipynb
+++ b/src/main/python/PlottingMethods.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,27 +122,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def drawSolutionDSAMF(curr_y, best_y, curr_x):\n",
+    "def drawSolutionDSAMF(curr_y, best_y, curr_x, best_x):\n",
     "    set_matplotlib_formats('retina')\n",
     "\n",
     "    cm = plt.cm.get_cmap('Greys')\n",
     "    lenY = len(curr_y)\n",
     "\n",
-    "    temp = 0\n",
-    "    best_x = []\n",
-    "    for i, v in enumerate(curr_y): \n",
-    "        if v==best_y[i]:\n",
-    "            best_x.append(curr_x[i])\n",
-    "            temp = curr_x[i]\n",
-    "        else:\n",
-    "            best_x.append(temp)\n",
-    "\n",
-    "    x = np.linspace(-2, 2, 10000)\n",
-    "    y = np.log(0.1*np.sin(10*x) + 0.01*np.power(x, 4) - 0.1 *np.power(x,2) +1)+1+0.7*x*x;\n",
+    "    x = np.linspace(-3, 3, 10000)\n",
+    "    y = np.log(0.1*np.sin(30*x) + 0.01*np.power(x, 4) - 0.1 *np.power(x,2) +1)+1;\n",
+    "    #y = np.log(0.1*np.sin(10*x) + 0.01*np.power(x, 4) - 0.1 *np.power(x,2) +1)+1+0.7*x*x;\n",
     "\n",
     "    line1, = plt.plot(x, y, color='k',linewidth=0.3 , zorder=1)\n",
     "    line1.set_label('Objective function')\n",
@@ -169,15 +161,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#path = \"../java/SimulatedAnnealing/GraphData/DSA_MinFunction.txt\"\n",
     "#best_y, curr_y, acceptance_pb, acc_best_sol, temp, density, markov_len, runtime, iteration_nbr = processDataDSA(path)\n",
     "#path = \"../java/SimulatedAnnealing/GraphData/DSA_MF_currX.txt\"\n",
-    "#curr_x = processDataDSA_MF(path)\n",
-    "#drawSolutionDSAMF(curr_y, best_y, curr_x)"
+    "#best_x, curr_x = processDataDSA_MF(path)\n",
+    "#drawSolutionDSAMF(curr_y, best_y, curr_x, best_x)"
    ]
   },
   {
