--- a/src/main/python/ProcessData.ipynb
+++ b/src/main/python/ProcessData.ipynb
@@ -115,17 +115,20 @@
    "outputs": [],
    "source": [
     "def processDataDSA_MF(pathTXT):\n",
+    "    bestX = []\n",
     "    currX = []\n",
     "    with open(pathTXT, \"r\") as file:\n",
     "        i=0\n",
     "        for line in file:\n",
     "            if(i!=0):\n",
-    "                CURR_X ,nothing  = line.split(\"|\")\n",
+    "                BEST_X, CURR_X ,nothing  = line.split(\"|\")\n",
+    "                bestX.append(float(BEST_X.strip()))\n",
     "                currX.append(float(CURR_X.strip()))\n",
     "            else:\n",
     "                i+=1\n",
     "    currX = np.asarray(currX)\n",
-    "    return currX"
+    "    bestX = np.asarray(bestX)\n",
+    "    return bestX, currX"
    ]
   },
   {
