MinFunction3D done with graph

--- a/src/main/python/PlottingMethods.ipynb
+++ b/src/main/python/PlottingMethods.ipynb
@@ -8,9 +8,12 @@
    "source": [
     "import numpy as np\n",
     "import re\n",
+    "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "from IPython.display import set_matplotlib_formats\n",
     "set_matplotlib_formats('retina')\n",
+    "\n",
     "%run ProcessData.ipynb"
    ]
   },
@@ -171,6 +174,76 @@
     "#best_x, curr_x = processDataDSA_MF(path)\n",
     "#drawSolutionDSAMF(curr_y, best_y, curr_x, best_x)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def drawSolutionDSAMF3D(curr_y, best_y, curr_x, best_x):\n",
+    "    set_matplotlib_formats('retina')\n",
+    "    CMAP = \"viridis_r\"#\"viridis\"\n",
+    "    \n",
+    "    N = 1000\n",
+    "    x = np.linspace(-10, 10, N)\n",
+    "    y = np.linspace(-10, 10, N).reshape(-1, 1)\n",
+    "    X, Y = np.meshgrid(x, y)\n",
+    "    Z = np.sin(-0.15*(x*x+y*y))+0.05*(np.power(x+np.pi, 2)+np.power(y-2, 2))+2;\n",
+    "\n",
+    "    \n",
+    "    fig, ax = plt.subplots()\n",
+    "    cs = ax.contourf(X, Y, Z, cmap=CMAP)\n",
+    "    \n",
+    "    \n",
+    "    plt.scatter(curr_x, curr_y, c=range(len(curr_y)), vmin=0, vmax=len(curr_y), s=20, label='Current Solution', cmap=\"Greys\", zorder=10)\n",
+    "    plt.scatter(best_x, best_y, s=50, marker=\"x\", label='Best Solution', color='red', zorder=100)\n",
+    "\n",
+    "\n",
+    "    fig = plt.gcf()\n",
+    "    fig.set_size_inches(13,10)\n",
+    "\n",
+    "    plt.xlabel(\"x values\")\n",
+    "    plt.ylabel(\"y values\")\n",
+    "\n",
+    "    cbar = fig.colorbar(cs)\n",
+    "\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#path = \"../java/SimulatedAnnealing/GraphData/DSA_MinFunction3D.txt\"\n",
+    "#best_y, curr_y, acceptance_pb, acc_best_sol, temp, density, markov_len, runtime, iteration_nbr = processDataDSA(path)\n",
+    "#path = \"../java/SimulatedAnnealing/GraphData/DSA_MF3D_currXY.txt\"\n",
+    "#best_x, curr_x, best_y, curr_y = processDataDSA_MF3D(path)\n",
+    "#drawSolutionDSAMF3D(curr_y, best_y, curr_x, best_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
