--- a/src/main/python/ProcessData.ipynb
+++ b/src/main/python/ProcessData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,6 +129,35 @@
     "    currX = np.asarray(currX)\n",
     "    bestX = np.asarray(bestX)\n",
     "    return bestX, currX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def processDataDSA_MF3D(pathTXT):\n",
+    "    bestX = []\n",
+    "    currX = []\n",
+    "    bestY = []\n",
+    "    currY = []\n",
+    "    with open(pathTXT, \"r\") as file:\n",
+    "        i=0\n",
+    "        for line in file:\n",
+    "            if(i!=0):\n",
+    "                BEST_X, CURR_X, BEST_Y, CURR_Y, nothing  = line.split(\"|\")\n",
+    "                bestX.append(float(BEST_X.strip()))\n",
+    "                currX.append(float(CURR_X.strip()))\n",
+    "                bestY.append(float(BEST_Y.strip()))\n",
+    "                currY.append(float(CURR_Y.strip()))\n",
+    "            else:\n",
+    "                i+=1\n",
+    "    currX = np.asarray(currX)\n",
+    "    bestX = np.asarray(bestX)\n",
+    "    currY = np.asarray(currY)\n",
+    "    bestY = np.asarray(bestY)\n",
+    "    return bestX, currX, bestY, currY"
    ]
   },
   {
