add features discussed in the meeting

--- a/src/main/python/ProcessData.ipynb
+++ b/src/main/python/ProcessData.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +36,7 @@
     "    temp = []\n",
     "    runtime = 0\n",
     "    iteration_nbr = 0\n",
+    "    \n",
     "    with open(pathTXT, \"r\") as file:\n",
     "        i=0\n",
     "        for line in file:\n",
@@ -78,6 +79,8 @@
     "    markov_len = []\n",
     "    runtime = 0\n",
     "    iteration_nbr = 0\n",
+    "    \n",
+    "    BestXiCurrXi = []\n",
     "    with open(pathTXT, \"r\") as file:\n",
     "        i=0\n",
     "        for line in file:\n",
