new graphs for multidimensionnal data

--- a/src/main/python/PlottingMethods.ipynb
+++ b/src/main/python/PlottingMethods.ipynb
@@ -164,20 +164,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#path = \"../java/SimulatedAnnealing/GraphData/DSA_MinFunction.txt\"\n",
-    "#best_y, curr_y, acceptance_pb, acc_best_sol, temp, density, markov_len, runtime, iteration_nbr = processDataDSA(path)\n",
-    "#path = \"../java/SimulatedAnnealing/GraphData/DSA_MF_currX.txt\"\n",
-    "#best_x, curr_x = processDataDSA_MF(path)\n",
-    "#drawSolutionDSAMF(curr_y, best_y, curr_x, best_x)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,6 +183,7 @@
     "    x = np.linspace(-10, 10, N)\n",
     "    y = np.linspace(-10, 10, N).reshape(-1, 1)\n",
     "    X, Y = np.meshgrid(x, y)\n",
+    "    print(y)\n",
     "    #Z = np.sin(-0.15*(x*x+y*y))+0.05*(np.power(x+np.pi, 2)+np.power(y-2, 2)) + 2;\n",
     "    Z = 0.5*(np.sin(2*x)+np.sin(2*y))+0.005*(np.power(x,2)+np.power(y,2))+1\n",
     "\n",
@@ -212,47 +207,6 @@
     "\n",
     "    plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#path = \"../java/SimulatedAnnealing/GraphData/DSA_MinFunction3D.txt\"\n",
-    "#best_y, curr_y, acceptance_pb, acc_best_sol, temp, density, markov_len, runtime, iteration_nbr = processDataDSA(path)\n",
-    "#path = \"../java/SimulatedAnnealing/GraphData/DSA_MF3D_currXY.txt\"\n",
-    "#best_x, curr_x, best_y, curr_y = processDataDSA_MF3D(path)\n",
-    "#drawSolutionDSAMF3D(curr_y, best_y, curr_x, best_x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
