--- a/src/main/python/ProcessData.ipynb
+++ b/src/main/python/ProcessData.ipynb
@@ -9,6 +9,7 @@
     "import numpy as np\n",
     "import re\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "from IPython.display import set_matplotlib_formats\n",
     "set_matplotlib_formats('retina')"
    ]
@@ -24,143 +25,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def processDataLSA(pathTXT):\n",
-    "    best_y = []\n",
-    "    curr_y = []\n",
+    "\n",
     "    acceptance_pb = []\n",
     "    acc_best_sol = []\n",
     "    temp = []\n",
-    "    runtime = 0\n",
-    "    iteration_nbr = 0\n",
-    "    \n",
-    "    with open(pathTXT, \"r\") as file:\n",
-    "        i=0\n",
-    "        for line in file:\n",
-    "            if(i!=0):\n",
-    "                if(line.startswith(\"Runtime\")):\n",
-    "                    runtime = float(re.sub(\"[^0-9^.]\", \"\", line))\n",
-    "                elif(line.startswith(\"Nbr\")):\n",
-    "                    iteration_nbr = int(re.sub(\"[^0-9]\", \"\", line))\n",
-    "                else:\n",
-    "                    BEST_y, CURR_y, ACCEPT_PB, ACC_BEST_Sol, TEMP, nothing  = line.split(\"|\")\n",
-    "                    best_y.append(float(BEST_y.strip()))\n",
-    "                    curr_y.append(float(CURR_y.strip()))\n",
-    "                    acceptance_pb.append(float(ACCEPT_PB.strip()))\n",
-    "                    acc_best_sol.append(ACC_BEST_Sol.strip())\n",
-    "                    temp.append(float(TEMP.strip()))\n",
-    "            i+=1\n",
-    "\n",
-    "    best_y = np.asarray(best_y)\n",
-    "    curr_y = np.asarray(curr_y)\n",
-    "    acceptance_pb = np.asarray(acceptance_pb)\n",
-    "    acc_best_sol = np.asarray(acc_best_sol)\n",
-    "    temp = np.asarray(temp)\n",
-    "    \n",
-    "    return best_y, curr_y, acceptance_pb, acc_best_sol, temp, runtime, iteration_nbr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def processDataDSA(pathTXT):\n",
     "    best_y = []\n",
     "    curr_y = []\n",
-    "    acceptance_pb = []\n",
-    "    acc_best_sol = []\n",
-    "    temp = []\n",
-    "    density = []\n",
-    "    markov_len = []\n",
     "    runtime = 0\n",
     "    iteration_nbr = 0\n",
-    "    \n",
-    "    BestXiCurrXi = []\n",
-    "    with open(pathTXT, \"r\") as file:\n",
-    "        i=0\n",
-    "        for line in file:\n",
-    "            if(i!=0):\n",
-    "                if(line.startswith(\"Runtime\")):\n",
-    "                    runtime = float(re.sub(\"[^0-9^.]\", \"\", line))\n",
-    "                elif(line.startswith(\"Nbr\")):\n",
-    "                    iteration_nbr = int(re.sub(\"[^0-9]\", \"\", line))\n",
-    "                else:\n",
-    "                    BEST_y, CURR_y, ACCEPT_PB, ACC_BEST_Sol, TEMP, DENSITY, MARKOV_LEN ,nothing  = line.split(\"|\")\n",
-    "                    best_y.append(float(BEST_y.strip()))\n",
-    "                    curr_y.append(float(CURR_y.strip()))\n",
-    "                    acceptance_pb.append(float(ACCEPT_PB.strip()))\n",
-    "                    acc_best_sol.append(ACC_BEST_Sol.strip())\n",
-    "                    temp.append(float(TEMP.strip()))\n",
-    "                    density.append(float(DENSITY.strip()))\n",
-    "                    markov_len.append(float(MARKOV_LEN.strip()))\n",
-    "            i+=1\n",
     "\n",
-    "    best_y = np.asarray(best_y)\n",
-    "    curr_y = np.asarray(curr_y)\n",
+    "\n",
+    "    with open(pathTXT, \"r\") as file:\n",
+    "        dimension = file.readline().count('BEST x')\n",
+    "        best_xs = np.zeros((dimension, 0))\n",
+    "        curr_xs = np.zeros((dimension, 0))\n",
+    "\n",
+    "        for line in file:\n",
+    "            if(line.startswith(\"Runtime\")):\n",
+    "                runtime = float(re.sub(\"[^0-9^.]\", \"\", line))\n",
+    "            elif(line.startswith(\"Nbr\")):\n",
+    "                iteration_nbr = int(re.sub(\"[^0-9]\", \"\", line))\n",
+    "            else:\n",
+    "                final = 5\n",
+    "                a = line.split(\"|\")\n",
+    "                a = [i.strip() for i in a][:-1]\n",
+    "                acceptance_pb.append(float(a[0]))\n",
+    "                acc_best_sol.append(a[1])\n",
+    "                temp.append(float(a[2]))\n",
+    "                best_y.append(float(a[3]))\n",
+    "                curr_y.append(float(a[4]))\n",
+    "\n",
+    "                best_xs_temp = np.zeros((dimension, 1))\n",
+    "                curr_xs_temp = np.zeros((dimension, 1))\n",
+    "                for i in range(dimension):\n",
+    "                    index = i*2\n",
+    "                    best_xs_temp[i] = float(a[final+index])\n",
+    "                    curr_xs_temp[i] = float(a[final+index+1])\n",
+    "                best_xs = np.concatenate((best_xs, best_xs_temp), axis = 1)\n",
+    "                curr_xs = np.concatenate((curr_xs, curr_xs_temp), axis = 1)\n",
+    "                \n",
     "    acceptance_pb = np.asarray(acceptance_pb)\n",
     "    acc_best_sol = np.asarray(acc_best_sol)\n",
     "    temp = np.asarray(temp)\n",
-    "    density = np.asarray(density)\n",
-    "    markov_len = np.asarray(markov_len)\n",
+    "    best_y = np.asarray(best_y)\n",
+    "    curr_y = np.asarray(curr_y)\n",
     "    \n",
-    "    return best_y, curr_y, acceptance_pb, acc_best_sol, temp, density, markov_len, runtime, iteration_nbr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def processDataDSA_MF(pathTXT):\n",
-    "    bestX = []\n",
-    "    currX = []\n",
-    "    with open(pathTXT, \"r\") as file:\n",
-    "        i=0\n",
-    "        for line in file:\n",
-    "            if(i!=0):\n",
-    "                BEST_X, CURR_X ,nothing  = line.split(\"|\")\n",
-    "                bestX.append(float(BEST_X.strip()))\n",
-    "                currX.append(float(CURR_X.strip()))\n",
-    "            else:\n",
-    "                i+=1\n",
-    "    currX = np.asarray(currX)\n",
-    "    bestX = np.asarray(bestX)\n",
-    "    return bestX, currX"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def processDataDSA_MF3D(pathTXT):\n",
-    "    bestX = []\n",
-    "    currX = []\n",
-    "    bestY = []\n",
-    "    currY = []\n",
-    "    with open(pathTXT, \"r\") as file:\n",
-    "        i=0\n",
-    "        for line in file:\n",
-    "            if(i!=0):\n",
-    "                BEST_X, CURR_X, BEST_Y, CURR_Y, nothing  = line.split(\"|\")\n",
-    "                bestX.append(float(BEST_X.strip()))\n",
-    "                currX.append(float(CURR_X.strip()))\n",
-    "                bestY.append(float(BEST_Y.strip()))\n",
-    "                currY.append(float(CURR_Y.strip()))\n",
-    "            else:\n",
-    "                i+=1\n",
-    "    currX = np.asarray(currX)\n",
-    "    bestX = np.asarray(bestX)\n",
-    "    currY = np.asarray(currY)\n",
-    "    bestY = np.asarray(bestY)\n",
-    "    return bestX, currX, bestY, currY"
+    "    return acceptance_pb, acc_best_sol, temp, best_y, curr_y, best_xs, curr_xs, runtime, iteration_nbr"
    ]
   },
   {
@@ -169,6 +84,144 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def processMarkovLen(init):\n",
+    "    temp = []\n",
+    "    for i, v in enumerate(init):\n",
+    "        if(i>1):\n",
+    "            if(v==1):\n",
+    "                temp.append(init[i-1])\n",
+    "    temp.append(v)\n",
+    "    \n",
+    "    final = list(np.ones(int(temp[0]+1))*temp[0])\n",
+    "    for i in range(len(temp)-1):\n",
+    "        final += list(np.linspace(int(temp[i]), int(temp[i+1]), int(temp[i+1]+1)))[1:]\n",
+    "    return np.asarray(final)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def processDataDSA(pathTXT):\n",
+    "    \n",
+    "    acceptance_pb = []\n",
+    "    acc_best_sol = []\n",
+    "    temp = []\n",
+    "    density = []\n",
+    "    markov_len = []\n",
+    "    best_y = []\n",
+    "    curr_y = []\n",
+    "    runtime = 0\n",
+    "    iteration_nbr = 0\n",
+    "    \n",
+    "    with open(pathTXT, \"r\") as file:\n",
+    "        dimension = file.readline().count('BEST x')\n",
+    "        best_xs = np.zeros((dimension, 0))\n",
+    "        curr_xs = np.zeros((dimension, 0))\n",
+    "\n",
+    "        for line in file:\n",
+    "            if(line.startswith(\"Runtime\")):\n",
+    "                runtime = float(re.sub(\"[^0-9^.]\", \"\", line))\n",
+    "            elif(line.startswith(\"Nbr\")):\n",
+    "                iteration_nbr = int(re.sub(\"[^0-9]\", \"\", line))\n",
+    "            else:\n",
+    "                final = 7\n",
+    "                a = line.split(\"|\")\n",
+    "                a = [i.strip() for i in a][:-1]\n",
+    "                acceptance_pb.append(float(a[0]))\n",
+    "                acc_best_sol.append(a[1])\n",
+    "                temp.append(float(a[2]))\n",
+    "                density.append(float(a[3]))\n",
+    "                markov_len.append(float(a[4]))\n",
+    "                best_y.append(float(a[5]))\n",
+    "                curr_y.append(float(a[6]))\n",
+    "\n",
+    "                best_xs_temp = np.zeros((dimension, 1))\n",
+    "                curr_xs_temp = np.zeros((dimension, 1))\n",
+    "                for i in range(dimension):\n",
+    "                    index = i*2\n",
+    "                    best_xs_temp[i] = float(a[final+index])\n",
+    "                    curr_xs_temp[i] = float(a[final+index+1])\n",
+    "                best_xs = np.concatenate((best_xs, best_xs_temp), axis = 1)\n",
+    "                curr_xs = np.concatenate((curr_xs, curr_xs_temp), axis = 1)\n",
+    "                \n",
+    "    acceptance_pb = np.asarray(acceptance_pb)\n",
+    "    acc_best_sol = np.asarray(acc_best_sol)\n",
+    "    temp = np.asarray(temp)\n",
+    "    best_y = np.asarray(best_y)\n",
+    "    curr_y = np.asarray(curr_y)\n",
+    "    \n",
+    "    density = np.asarray(density)\n",
+    "    markov_len = processMarkovLen(markov_len)[:len(temp)]\n",
+    "    \n",
+    "    \n",
+    "    return acceptance_pb, acc_best_sol, temp, density, markov_len, best_y, curr_y, best_xs, curr_xs, runtime, iteration_nbr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#path = \"../java/SimulatedAnnealing/GraphData/DSA_MinFunction.txt\"\n",
+    "#acceptance_pb, acc_best_sol, temp, density, markov_len, best_y, curr_y, best_xs, curr_xs, runtime, iteration_nbr = processDataDSA(path)\n",
+    "#print(len(markov_len), len(temp))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def processData4D_panda(pathTXT):\n",
+    "    a = []\n",
+    "    tab = []\n",
+    "    i = 0\n",
+    "    with open(pathTXT, \"r\") as file:\n",
+    "        for line in file:\n",
+    "            if(line.startswith(\"Runtime\")):\n",
+    "                runtime = float(re.sub(\"[^0-9^.]\", \"\", line))\n",
+    "            elif(line.startswith(\"Nbr\")):\n",
+    "                iteration_nbr = int(re.sub(\"[^0-9]\", \"\", line))\n",
+    "            else:\n",
+    "                a = line.split(\"|\")\n",
+    "                a.pop(1)\n",
+    "                a = [i.strip() for i in a][:-1]\n",
+    "                if(i!=0):\n",
+    "                    a = [float(i) for i in a]\n",
+    "                tab.append(a)\n",
+    "            i+=1\n",
+    "    titles = tab[0]\n",
+    "    col_to_del = titles[:4]\n",
+    "    dtf = pd.DataFrame(data=tab[1:],columns=titles)\n",
+    "    afterdrop_all = dtf.drop(col_to_del, axis = 1)\n",
+    "    col_to_del = titles[4::2]\n",
+    "    afterdrop_cur = afterdrop_all.drop(col_to_del, axis = 1)\n",
+    "    col_to_del = titles[5::2]\n",
+    "    afterdrop_bes = afterdrop_all.drop(col_to_del, axis = 1)\n",
+    "    \n",
+    "    return afterdrop_all, afterdrop_cur, afterdrop_bes"
+   ]
   },
   {
    "cell_type": "code",
