--- a/src/main/python/PlottingMethods.ipynb
+++ b/src/main/python/PlottingMethods.ipynb
@@ -152,7 +152,8 @@
     "    ax.set_facecolor('navajowhite')\n",
     "\n",
     "    plt.legend()\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "    fig.savefig('foo.png', format='png', dpi=600)"
    ]
   },
   {
@@ -183,7 +184,6 @@
     "    x = np.linspace(-10, 10, N)\n",
     "    y = np.linspace(-10, 10, N).reshape(-1, 1)\n",
     "    X, Y = np.meshgrid(x, y)\n",
-    "    print(y)\n",
     "    #Z = np.sin(-0.15*(x*x+y*y))+0.05*(np.power(x+np.pi, 2)+np.power(y-2, 2)) + 2;\n",
     "    Z = 0.5*(np.sin(2*x)+np.sin(2*y))+0.005*(np.power(x,2)+np.power(y,2))+1\n",
     "\n",
@@ -198,14 +198,14 @@
     "\n",
     "\n",
     "    fig = plt.gcf()\n",
-    "    fig.set_size_inches(13,10)\n",
+    "    fig.set_size_inches(9,6)\n",
     "\n",
     "    plt.xlabel(\"x values\")\n",
     "    plt.ylabel(\"y values\")\n",
     "\n",
     "    cbar = fig.colorbar(cs)\n",
-    "\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "    fig.savefig('foo.png', format='png', dpi=600)"
    ]
   },
   {
