--- a/src/main/python/PlottingMethods.ipynb
+++ b/src/main/python/PlottingMethods.ipynb
@@ -120,7 +120,8 @@
     "\n",
     "    plt.legend()\n",
     "    plt.yscale('log')\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "    fig.savefig('foo.png', format='png', dpi=600)"
    ]
   },
   {
@@ -178,7 +179,7 @@
    "source": [
     "def drawSolutionDSAMF3D(curr_y, best_y, curr_x, best_x):\n",
     "    set_matplotlib_formats('retina')\n",
-    "    CMAP = \"viridis_r\"#\"viridis\"\n",
+    "    CMAP = \"Spectral_r\"#\"viridis\"\n",
     "    \n",
     "    N = 1000\n",
     "    x = np.linspace(-10, 10, N)\n",
@@ -198,14 +199,14 @@
     "\n",
     "\n",
     "    fig = plt.gcf()\n",
-    "    fig.set_size_inches(9,6)\n",
+    "    fig.set_size_inches(13,10)\n",
     "\n",
     "    plt.xlabel(\"x values\")\n",
     "    plt.ylabel(\"y values\")\n",
     "\n",
     "    cbar = fig.colorbar(cs)\n",
     "    plt.show()\n",
-    "    fig.savefig('foo.png', format='png', dpi=600)"
+    "    fig.savefig('foo.png', format='png', dpi=400)"
    ]
   },
   {
