--- a/src/main/python/PlottingMethods.ipynb
+++ b/src/main/python/PlottingMethods.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,8 +185,8 @@
     "    x = np.linspace(-10, 10, N)\n",
     "    y = np.linspace(-10, 10, N).reshape(-1, 1)\n",
     "    X, Y = np.meshgrid(x, y)\n",
-    "    #Z = np.sin(-0.15*(x*x+y*y))+0.05*(np.power(x+np.pi, 2)+np.power(y-2, 2)) + 2;\n",
-    "    Z = 0.5*(np.sin(2*x)+np.sin(2*y))+0.005*(np.power(x,2)+np.power(y,2))+1\n",
+    "    Z = np.sin(-0.15*(x*x+y*y))+0.05*(np.power(x+np.pi, 2)+np.power(y-2, 2)) + 2;\n",
+    "    #Z = 0.5*(np.sin(2*x)+np.sin(2*y))+0.005*(np.power(x,2)+np.power(y,2))+1\n",
     "\n",
     "\n",
     "    \n",
