--- a/src/main/python/ProcessData.ipynb
+++ b/src/main/python/ProcessData.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import re\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
+    "#import seaborn as sns\n",
     "from IPython.display import set_matplotlib_formats\n",
     "set_matplotlib_formats('retina')"
    ]
